# GBQ-connector

./: .gitignore  Pipfile  pyproject.toml  setup.cfg
src/gbq_connector/: __init__.py  bigquery_client.py  client.py  cloud_client.py
src/gbq_connector.egg-info/: PKG-INFO  requires.txt
