[metadata]
name = gbq_connector
version = 0.1.0
description = A wrapper for common Google Biq Query Operations
author = Mark Young
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    gbq_connector
python_requires = >=3.10
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing =
    tox >= 4.0
    pytest >= 7.0
    pytest-cov >= 4.0
    requests>=2.0

[options.package_data]
job_notifications = py.typed
